Minor admin theme enhancement

--- a/src/Smartstore.Web/wwwroot/admin/_variables.scss
+++ b/src/Smartstore.Web/wwwroot/admin/_variables.scss
@@ -166,7 +166,7 @@ $btn-border-radius-sm:          $input-border-radius-sm;
 
 $dropdown-padding-x:            .375rem;
 $dropdown-padding-y:            .375rem;
-$dropdown-border-radius:        $border-radius;
+$dropdown-border-radius:        $border-radius-lg;
 $dropdown-border-color:         $gray-200;
 $dropdown-header-color:         $body-secondary-color;
 $dropdown-link-disabled-color:  $gray-500;
