AI icon for image creation and remove file upload must not interfere

--- a/src/Smartstore.Web/wwwroot/admin/_admin.scss
+++ b/src/Smartstore.Web/wwwroot/admin/_admin.scss
@@ -1673,3 +1673,7 @@ a.editable {
     pointer-events: initial !important;
     height: auto !important;
 }
+
+.ai-dialog-opener-root .fu-remove {
+    margin-inline-end: 2.25em;
+}
