--- a/src/Smartstore.Web/Areas/Admin/Views/Setting/Price.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Setting/Price.cshtml
@@ -46,6 +46,15 @@
             <span asp-validation-for="PriceSettings.DisplayTextForZeroPrices"></span>
         </div>
     </div>
+    <div class="adminRow">
+        <div class="adminTitle">
+            <smart-label asp-for="PriceSettings.ApplyPriceRangeFormatInProductDetails" />
+        </div>
+        <div class="adminData">
+            <setting-editor asp-for="PriceSettings.ApplyPriceRangeFormatInProductDetails"></setting-editor>
+            <span asp-validation-for="PriceSettings.ApplyPriceRangeFormatInProductDetails"></span>
+        </div>
+    </div>
 
     <div class="adminRow">
         <div class="admin-config-group">
