Added custom Summernote library (wip, currently inactive)

--- a/src/Smartstore.Web/wwwroot/admin/theme.scss
+++ b/src/Smartstore.Web/wwwroot/admin/theme.scss
@@ -42,6 +42,7 @@
 @import "../lib/colorpicker/scss/colorpicker";
 @import "../lib/datetimepicker/scss/tempusdominus";
 @import "../lib/editors/summernote/scss/summernote";
+//@import "../lib/editors/summernote2/scss/summernote";
 
 
 //
