WidgetTagHelper should always register widget if a widget key is present

--- a/src/Smartstore.Web/Views/Shared/EditorTemplates/Html.cshtml
+++ b/src/Smartstore.Web/Views/Shared/EditorTemplates/Html.cshtml
@@ -37,7 +37,7 @@
         await CommonServices.EventPublisher.PublishAsync(htmlEditorRenderingEvent);
         foreach (var widget in htmlEditorRenderingEvent.Widgets)
         {
-            await widget.InvokeAsync(ViewContext);
+            @await widget.InvokeAsync(ViewContext)
         }
     }
 </widget>
