--- a/src/Smartstore.Web/wwwroot/lib/editors/summernote2/scss/summernote.scss
+++ b/src/Smartstore.Web/wwwroot/lib/editors/summernote2/scss/summernote.scss
@@ -287,7 +287,7 @@ $img-margin-right: 10px;
 
 .note-color-reset,
 .note-color-select {
-  --btn-height: 24px;
+  --btn-height: 24px !important;
 }
 
 .note-color-select-btn {
