--- a/src/Smartstore.Web/wwwroot/admin/_admin.scss
+++ b/src/Smartstore.Web/wwwroot/admin/_admin.scss
@@ -5,6 +5,8 @@ $section-header-height: 70px;
 :root {
     --content-padding-x: #{$content-padding-x / 2};
     --content-padding-y: #{$content-padding-y};
+    // Adjust to medium button height
+    --section-header-size: calc((#{$input-btn-font-size} * #{$input-btn-line-height}) + #{$input-padding-y * 2} + 2px);
 
     @include media-breakpoint-up(lg) {
         --content-padding-x: #{$content-padding-x};
@@ -187,7 +189,6 @@ body {
 }
 
 .section-header {
-    --header-size: calc((#{$input-btn-font-size} * #{$input-btn-line-height}) + #{$input-padding-y * 2} + 2px); // Adjust to medium button height
     position: absolute;
     inset-inline-start: 0;
     inset-inline-end: 0;
@@ -209,8 +210,8 @@ body {
         font-weight: $font-weight-medium;
         color: $headings-color;
         font-size: $h4-font-size;
-        line-height: var(--header-size);
-        min-height: var(--header-size);
+        line-height: var(--section-header-size);
+        min-height: var(--section-header-size);
         vertical-align: middle;
         @include text-truncate();
         padding-inline: 0 5px;
@@ -232,7 +233,7 @@ body {
         }
 
         > img {
-            max-height: var(--header-size);
+            max-height: var(--section-header-size);
             max-width: 120px;
             vertical-align: top;
         }
