--- a/src/Smartstore.Web/Areas/Admin/Views/Setting/GeneralCommon.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Setting/GeneralCommon.cshtml
@@ -635,6 +635,15 @@
                 </div>
                 <div class="adminRow">
                     <div class="adminTitle">
+                        <smart-label asp-for="PdfSettings.MaxItemsToPrint" />
+                    </div>
+                    <div class="adminData">
+                        <setting-editor asp-for="PdfSettings.MaxItemsToPrint"></setting-editor>
+                        <span asp-validation-for="PdfSettings.MaxItemsToPrint"></span>
+                    </div>
+                </div>
+                <div class="adminRow">
+                    <div class="adminTitle">
                         <smart-label asp-for="PdfSettings.LogoPictureId" />
                     </div>
                     <div class="adminData" id="pdf-logo-picture">
