--- a/src/Smartstore.Web/Areas/Admin/Views/Rule/List.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Rule/List.cshtml
@@ -1,14 +1,19 @@
-﻿@{
-    ViewBag.Title = T("Common.Rules").Value;
+﻿@model RuleListModel
 
-	Assets.BodyAttributes.AppendCssClass("spa-layout");
+@{
+    ViewBag.Title = Model.ScopeName ?? T("Common.Rules").Value;
+
+    Assets.BodyAttributes.AppendCssClass("spa-layout");
+
+    var gridViewData = new ViewDataDictionary(ViewData);
+    gridViewData["Parent"] = Model;
 }
 
 <div class="section-header">
     <div class="title">
         <i class="fa fa-filter"></i>
-        @T("Common.Rules")
+        <span>@ViewBag.Title</span>
     </div>
 </div>
 
-<partial name="_Grid.Rules" model="null" />
+<partial name="_Grid.Rules" model="null" view-data="gridViewData" />
