--- a/src/Smartstore.Web/Areas/Admin/Views/Rule/Create.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Rule/Create.cshtml
@@ -1,13 +1,15 @@
 ﻿@model RuleSetModel
 
 @{
+    var returnUrl = ((string)ViewBag.ReturnUrl).NullEmpty() ?? Url.Action("List");
+
     ViewBag.Title = T("Admin.Rules.AddRule").Value;
 }
 
 <form asp-action="Create">
     <div class="section-header">
         <div class="title">
-            <a sm-backto asp-action="List"></a>
+            <a sm-backto href="@returnUrl" title="@T("Common.Back")"></a>
             <i class="fa fa-filter"></i>
             <span>@ViewBag.Title</span>
         </div>
