--- a/src/Smartstore.Web/Areas/Admin/Views/Category/_CreateOrUpdate.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Category/_CreateOrUpdate.cshtml
@@ -19,7 +19,7 @@
 
 <tabstrip id="category-edit" sm-nav-style="Material" sm-nav-position="Left" sm-onajaxsuccess="categoryEditTab_onAjaxSuccess">
 	<tab sm-title="@T("Admin.Common.General")" sm-icon="bi:pencil" sm-selected="true">
-		<div class="adminContent">
+        <div class="adminContent">
             <div sm-if="Model.Id != 0" class="adminRow">
                 <div class="adminTitle">
                     <smart-label asp-for="Id" />
@@ -43,13 +43,13 @@
                     <smart-label asp-for="ParentCategoryId" />
                 </div>
                 <div class="adminData">
-                    <select asp-for="ParentCategoryId" 
-                        asp-items="parentCategoryItems" 
-                        asp-placeholder="@parentCategoryPlaceholder"
-                        data-select="True" 
-                        data-select-lazy="True" 
-                        data-select-init-text="@parentCategoryBreadcrumb"
-                        data-select-url="@Url.Action("AllCategories", "Category", new { selectedIds = Model.ParentCategoryId })">
+                    <select asp-for="ParentCategoryId"
+                            asp-items="parentCategoryItems"
+                            asp-placeholder="@parentCategoryPlaceholder"
+                            data-select="True"
+                            data-select-lazy="True"
+                            data-select-init-text="@parentCategoryBreadcrumb"
+                            data-select-url="@Url.Action("AllCategories", "Category", new { selectedIds = Model.ParentCategoryId })">
                     </select>
                     <span asp-validation-for="ParentCategoryId"></span>
                 </div>
@@ -81,7 +81,16 @@
                     <span asp-validation-for="ShowOnHomePage"></span>
                 </div>
             </div>
-		</div>
+            <div class="adminRow">
+                <div class="adminTitle">
+                    <smart-label asp-for="IgnoreInMenus" />
+                </div>
+                <div class="adminData">
+                    <input asp-for="IgnoreInMenus" />
+                    <span asp-validation-for="IgnoreInMenus"></span>
+                </div>
+            </div>
+        </div>
 
     @(Html.LocalizedEditor<CategoryModel, CategoryLocalizedModel>("category-info-localized",
 	    @<text>
